--- a/layouts/shortcodes/figures/sweden_globals.html
+++ b/layouts/shortcodes/figures/sweden_globals.html
@@ -116,16 +116,11 @@
 	// Global variables //
 	// ---------------- //
 	let eventDates = [
-		["2020-03-11 00:00:00", 'PM announces lockdown starting March 16', 'event1'],
-		["2020-03-16 00:00:00", 'Lockdown officially begins', 'event2'],
-		["2020-04-09 00:00:00", 'Skærtorsdag (public holiday during Easter)', 'event3'],
-		["2020-04-10 00:00:00", 'Lockdown relaxations announced', 'event4'],
-		["2020-04-15 00:00:00", 'Child-care soft-reopens', 'event5'],
-		["2020-04-20 00:00:00", 'Small businesses open', 'event6'],
-		["2020-04-27 00:00:00", 'IKEA opens (controversy)', 'event7']
+		["2020-04-30 00:00:00", 'Valborgmässoafton', 'event1'],
+		["2020-05-01 00:00:00", 'Förste maj, Public holiday in Sweden', 'event2']
 	]
 
-	let startDate = "2020-03-10 00:00:00";
+	let startDate = "2020-03-31 00:00:00";
 
 	// Define tooltip div
 	let tooltip = d3.select("body").append("div")
