Updated some Denmark references

--- a/layouts/shortcodes/figures/sweden_gini.html
+++ b/layouts/shortcodes/figures/sweden_gini.html
@@ -107,7 +107,7 @@
 			.attr("y", -15)
 			.style("text-anchor", "middle")
 			.style("font-weight", 700)
-			.text("Change in population distribution across Denmark");
+			.text("Change in population distribution across Sweden");
 
 		// Toggle relative
 		svg.append("text")
